--- a/app/src/main/res/layout/aqi.xml
+++ b/app/src/main/res/layout/aqi.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="15dp"
+    android:background="#8000"
     >
     <TextView
         android:layout_width="wrap_content"
