--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -9,6 +9,10 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:id="@+id/bing_pic_img"/>
+    <android.support.v4.widget.DrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/drawer_layout">
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +38,14 @@
         </LinearLayout>
     </ScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/choose_area_fragment"
+            android:name="com.example.weizifen.coolweather.ChooseAreaFragment"
+            android:layout_gravity="start"
+            />
+    </android.support.v4.widget.DrawerLayout>
 
 
 </FrameLayout>
