--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -22,6 +22,18 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@drawable/ic_back"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="定位"
+            android:textColor="@color/colorAccent"
+            android:background="#00000000"
+            android:layout_alignParentRight="true"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:layout_centerVertical="true"
+            android:id="@+id/location"
+            />
 
     </RelativeLayout>
     <ListView
